--- a/README.adoc
+++ b/README.adoc
@@ -35,7 +35,7 @@ link:https://github.com/ByeongSoon/TIL/tree/master/Java[여기]
 . link:https://github.com/ByeongSoon/spring4/tree/master/sp4-chap04/src/main[의존 자동 주입]
 . link:https://github.com/ByeongSoon/spring4/tree/master/sp4-chap05/src/main[자바 코드를 이용한 설정]
 . link:https://github.com/ByeongSoon/spring4/tree/master/sp4-chap06/src/main[빈 라이프사이클과 범위]
-. AOP 소개
+. link:https://github.com/ByeongSoon/spring4/tree/master/sp4-chap07/src/main[AOP 소개]
 . DB 연동
 . 스프링 MVC 시작하기
 . 스프링 MVC 프레임워크 동작 방식
